# usagedb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rust_ai_usage_db_spec.md
.github/workflows/: ci.yml
src/: admin.rs  lib.rs  main.rs  period.rs
src/api/: http.rs  http_server.rs  mod.rs
src/compact/: mod.rs  planner.rs  worker.rs
src/export/: mod.rs  parquet.rs
src/ingest/: dedupe.rs  flusher.rs  memtable.rs  mod.rs  wal.rs  writer.rs
src/model/: dimensions.rs  event.rs  ids.rs  mod.rs  query.rs
src/query/: executor.rs  mod.rs  plan.rs  sql.rs
src/rollup/: builder.rs  hourly.rs  mod.rs  reader.rs  watermark.rs  worker.rs  writer.rs
src/runtime/: config.rs  lock.rs  mod.rs  recovery.rs  state.rs
src/storage/: columns.rs  compression.rs  dedupe_index.rs  encoding.rs  manifest.rs  mod.rs  segment_format.rs  segment_reader.rs  segment_writer.rs
tests/: admin.rs  billing_safety.rs  bucketing.rs  compaction.rs  dedupe_index.rs  dst.proptest-regressions  dst.rs  durability.rs  encodings.rs  explain_verify.rs  p0_manifest_atomic.rs  p0_shutdown.rs  p1_fixes.rs  parquet_export.rs  period_lifecycle.rs  phase_a.rs  polish.rs  properties.proptest-regressions  properties.rs  rollup_provenance.rs  rollups.rs  segment_format.rs
