[package]
name = "usagedb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
hyper = "1.9.0"
lz4_flex = "0.13.1"
memmap2 = "0.9.10"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlparser = "0.62.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
zstd = "0.13.3"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
